# Interpolation_math

./: .gitignore  CMakeLists.txt  README.md
img/: figure_1.fig  figure_2.fig
include/Polynomial/: Polynomial.hpp  PolynomialInternal.hpp
include/ThreeInterpolation/: ThreeInterpolation.cpp  ThreeInterpolation.h
include/ThreeSpline/: SimpleInterpolation.hpp  ThreeInterpolation.h  ThreeSpline.h
include/Utility/: EigenTypes.h  dmotion_math.hpp
matlab/: plot_interpolation.m  three_interpolation_test.m  three_try.m
test/: three_try.cpp  threespline_test.cpp
